generated/manifests/prod-axon/prowlarr/Service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/service: prowlarr
  name: prowlarr
  namespace: media
spec:
  ports:
    - name: http
      port: 9696
      protocol: TCP
      targetPort: 9696
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
  type: ClusterIP
