generated/manifests/prod-axon/prowlarr/HTTPRoute-prowlarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  hostnames:
    - prowlarr.json64.dev
  parentRefs:
    - name: default-gateway
      namespace: gateways
      sectionName: json64-dev-https
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
      timeouts:
        request: 300s
