generated/manifests/prod-axon/prowlarr/SecurityPolicy-prowlarr-oidc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prowlarr-oidc
  namespace: media
spec:
  oidc:
    clientID: prowlarr
    clientSecret:
      name: prowlarr-oidc-client-secret
    forwardAccessToken: true
    provider:
      authorizationEndpoint: https://idm.json64.dev/ui/oauth2
      issuer: https://idm.json64.dev/oauth2/openid/prowlarr
      tokenEndpoint: https://idm.json64.dev/oauth2/token
    scopes:
      - email
      - openid
      - profile
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prowlarr
