generated/manifests/prod-axon/prowlarr/CiliumNetworkPolicy-allow-dns-egress-prowlarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns-egress-prowlarr
  namespace: media
spec:
  description: Allow prowlarr to resolve via kube-dns.
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
