generated/manifests/prod-axon/prowlarr/CiliumNetworkPolicy-allow-gateway-ingress-prowlarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress-prowlarr
  namespace: media
spec:
  description: Allow Envoy Gateway proxies to reach prowlarr.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gateways
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
