generated/manifests/prod-axon/prowlarr/CiliumNetworkPolicy-allow-metrics-ingress-prowlarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-metrics-ingress-prowlarr
  namespace: media
spec:
  description: Allow Prometheus to scrape prowlarr's exportarr sidecar (9707).
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9707"
              protocol: TCP
